feat: upgrade Contact file